package com.example.todo.models;

public enum Role {
    REGULAR,
    ADMINISTRATOR
}
