package com.example.todo.services;

import com.example.todo.repositories.CollaborationRepository;
import com.example.todo.repositories.TodoListRepository;
import com.example.todo.repositories.UserRepository;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.stereotype.Service;

@Service
public class AuthorizationService {

    @Autowired
    private UserRepository userRepository;

    @Autowired
    private TodoListRepository listRepository;

    @Autowired
    private CollaborationRepository collaborationRepository;

    public boolean canAccessList(Integer userId, Integer listId) {
        // TODO: Implement authorization logic
        return false;
    }

    public boolean canModifyProfile(Integer requestingUserId, Integer targetUserId) {
        // TODO: Implement authorization logic
        return false;
    }

    public boolean isAdmin(Integer userId) {
        // TODO: Implement admin check logic
        return false;
    }

    public Integer resolveToken(String token) {
        // TODO: Implement token resolution logic
        return null;
    }
}

