enum Priority {
    LOW,
    MEDIUM,
    HIGH
}

export default Priority;